# tank-operator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MIGRATION-INFRA-BOOTSTRAP.md  README.md
.github/agent/: job.yaml  prompt.md
.github/workflows/: agent-container-build.yml  agent-execute.yaml  api-proxy-build.yml  build.yml  claude-container-build.yml  env-prep.yaml  issue-agent-runner-build.yml  issue-agent.yaml  mcp-argocd-build.yml  mcp-github-build.yml  mcp-glimmung-build.yml  mcp-k8s-build.yml  tofu.yml
agent-container/: Dockerfile
api-proxy/: Dockerfile  pyproject.toml
api-proxy/protos/: README.md
api-proxy/src/tank_api_proxy/: __main__.py  server.py
backend/: pyproject.toml
backend/src/tank_operator/: __main__.py  api.py  auth.py  credentials_seed.py  cron_refresh.py  exec_proxy.py  oauth_gateway.py  profiles.py  refresh_credentials.py  sessions.py
claude-container/: Dockerfile  Dockerfile.dockerignore  default-claude.md  entrypoint.sh  fetch-skills.py  mcp.json  tank-bootstrap.sh
claude-container/mcp-auth-proxy/: pyproject.toml
claude-container/mcp-auth-proxy/src/mcp_auth_proxy/: __main__.py  server.py
claude-container/platform-mcp/: pyproject.toml
claude-container/platform-mcp/src/platform_mcp/: __main__.py  tools.py
claude-container/skills/done/: SKILL.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  StyleguideView.tsx  Terminal.tsx  auth.ts  fonts.css  index.css  main.tsx  wrappedLinkProvider.ts
infra/: api_proxy.tf  api_proxy_ci.tf  azure_data.tf  claude_container_ci.tf  cosmos.tf  credential_refresher.tf  mcp.tf  mcp_github_ci.tf  mcp_k8s_ci.tf  oauth_app.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
infra/mcp-server/: outputs.tf  variables.tf
k8s/: values.yaml
k8s-arc-runners/: Chart.yaml  values-issue-agents.yaml  values.yaml
k8s-arc-runners/charts/: gha-runner-scale-set-0.14.1.tgz
k8s-arc-runners/templates/: agent-jobs-namespace.yaml  github-config-externalsecret.yaml  runner-rbac.yaml
k8s-mcp-argocd/: values.yaml
k8s-mcp-azure/: Chart.yaml  values.yaml
k8s-mcp-azure/templates/: auth-delegator.yaml  deployment.yaml  externalsecret.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
k8s-mcp-github/: values.yaml
k8s-mcp-github/templates/: deployment.yaml
k8s-mcp-glimmung/: values.yaml
k8s-mcp-k8s/: Chart.yaml  values.yaml
k8s-mcp-k8s/templates/: auth-delegator.yaml  cluster-reader.yaml  deployment.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
k8s-sessions/: Chart.yaml
k8s/templates/: api-proxy.yaml  certificate.yaml  credential-refresher.yaml  deployment.yaml  externalsecret-auth.yaml  externalsecret-codex.yaml  externalsecret-oauth.yaml  externalsecret.yaml  httproute.yaml  namespace.yaml  oauth-gateway.yaml  oauth2-proxy.yaml  rbac.yaml  serviceaccount.yaml  xlistenerset.yaml
mcp-servers/argocd/src/mcp_argocd/: tools.py
mcp-servers/github/src/mcp_github/: auth.py  github_client.py  http.py  tools.py
mcp-servers/glimmung/: .dockerignore  Dockerfile  pyproject.toml
mcp-servers/glimmung/src/mcp_glimmung/: glimmung_client.py  tools.py
mcp-servers/k8s/: Dockerfile  pyproject.toml
mcp-servers/k8s/src/mcp_k8s/: http.py  tools.py
runner/: Dockerfile
scripts/: setup-anthropic-key.ps1  setup-anthropic-key.sh  setup-claude-credentials.ps1  setup-claude-credentials.sh  setup-claude-token.ps1  setup-claude-token.sh
