[project]
name = "tank-api-proxy"
version = "0.1.0"
description = "Envoy ext_proc auth injector for the Anthropic API. Replaces the per-pod credential lifecycle with a single in-cluster proxy that owns refresh."
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.66",
    "protobuf>=5.28",
    "httpx>=0.27",
    "azure-identity>=1.19",
    "azure-keyvault-secrets>=4.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tank_api_proxy"]

[project.scripts]
tank-api-proxy = "tank_api_proxy.__main__:main"
