[project]
name = "tank-operator"
version = "0.1.0"
description = "Web frontend over a K8s orchestrator that spawns ephemeral Claude agent pods."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "kubernetes-asyncio>=31.1.0",
  "pyjwt[crypto]>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tank_operator"]
