[project]
name = "platform-mcp"
version = "0.1.0"
description = "Repo-specific paved-path tools surfaced via MCP for the in-container Claude agent."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_mcp"]

[project.scripts]
platform-mcp = "platform_mcp.__main__:main"
