[project]
name = "mcp-k8s"
version = "0.1.0"
description = "Read-only kubectl/helm MCP server. Cluster-wide get/list/watch via the in-pod SA's ClusterRoleBinding; incoming auth via kube-rbac-proxy K8s SA TokenReview."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.18.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_k8s"]

[project.scripts]
mcp-k8s-http = "mcp_k8s.http:main"
